Fixed height overflow issue on search results box

--- a/src/features/header/Header.scss
+++ b/src/features/header/Header.scss
@@ -7,3 +7,8 @@
 .breadcrumb-text {
     text-transform: capitalize;
 }
+
+.results.transition.visible {
+    max-height: calc(90vh - 10rem);
+    overflow: auto;
+}
